Add: new projects and minor fixes

--- a/data_science/temperature_forecast/NB1_ar_modelling.ipynb
+++ b/data_science/temperature_forecast/NB1_ar_modelling.ipynb
@@ -49,7 +49,7 @@
     ") -> None:\n",
     "    \"\"\"\n",
     "    Performs and prints results of either one of two Unit root tests:\n",
-    "    an augmented Dickey-Fuller test or an Kwiatkowski-Phillips-Schmidt-Shin test.\n",
+    "    an augmented Dickey-Fuller test or an Kwiatkowski-Philips-Schmidt-Shin test.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -357,7 +357,7 @@
     "_fig, ax5 = plt.subplots(figsize=(12, 6))\n",
     "df_train[[\"residual\"]].loc[:\"1965-01-01\"].plot(\n",
     "    ax=ax5,\n",
-    "    title=\"Resiual temperature not captured by seasonality trend analysis\",\n",
+    "    title=\"Residual temperature not captured by seasonality trend analysis\",\n",
     "    ylabel=\"Temperature\",\n",
     "    xlabel=\"Year\",\n",
     ")\n",
@@ -413,7 +413,7 @@
     "_fig, ax6 = plt.subplots(figsize=(12, 6))\n",
     "plot_acf(df_train[\"residual\"], ax=ax6, alpha=0.05)\n",
     "ax6.set_ylabel(\"Temperature\")\n",
-    "ax6.set_xlabel(\"Years\")\n",
+    "ax6.set_xlabel(\"Lags\")\n",
     "sns.despine(trim=True)\n",
     "_fig, ax7 = plt.subplots(figsize=(12, 6))\n",
     "plot_pacf(df_train[\"residual\"], ax=ax7, alpha=0.05)\n",
