--- a/data_science/temperature_forecast/NB2_arima-sarimax_modelling.ipynb
+++ b/data_science/temperature_forecast/NB2_arima-sarimax_modelling.ipynb
@@ -229,12 +229,12 @@
     "print(\"Test data\")\n",
     "print(\n",
     "    \"Autoregressive Model (r2 /\"\n",
-    "    f\" MSE):\\n\\t\\t{r2_score(df_train['TG'], df_train['AR_prediction']):.4f} /\"\n",
-    "    f\" {mean_squared_error(df_train['TG'], df_train['AR_prediction']):.4f}\"\n",
+    "    f\" MSE):\\n\\t\\t{r2_score(df_test['TG'], df_test['AR_prediction']):.4f} /\"\n",
+    "    f\" {mean_squared_error(df_test['TG'], df_test['AR_prediction']):.4f}\"\n",
     ")\n",
     "print(\n",
-    "    f\"ARIMA Model (r2 / MSE):\\n\\t\\t{r2_score(df_train['TG'], df_train['ARIMA_prediction']):.4f} /\"\n",
-    "    f\" {mean_squared_error(df_train['TG'], df_train['ARIMA_prediction']):.4f}\"\n",
+    "    f\"ARIMA Model (r2 / MSE):\\n\\t\\t{r2_score(df_test['TG'], df_test['ARIMA_prediction']):.4f} /\"\n",
+    "    f\" {mean_squared_error(df_test['TG'], df_test['ARIMA_prediction']):.4f}\"\n",
     ")"
    ]
   },
