minor fix forecast

--- a/data_science/temperature_forecast/NB1_ar_modelling.ipynb
+++ b/data_science/temperature_forecast/NB1_ar_modelling.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +156,142 @@
    "source": [
     "Remove missing temperature data and convert the remaining temperatures to full °C (were given in .1°C) and drop missing data.\n",
     "Note: Dropping data might be a slight be an issue for our modelling, so either we start after the missing temperature values (i.e. after the war 1946). Or we interpolate the data by replacing the missing data with the average seasonality from other years where we actually have data. For now we drop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SOUID</th>\n",
+       "      <th>TG</th>\n",
+       "      <th>Q_TG</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DATE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1876-01-01</th>\n",
+       "      <td>127488</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1876-01-02</th>\n",
+       "      <td>127488</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1876-01-03</th>\n",
+       "      <td>127488</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1876-01-04</th>\n",
+       "      <td>127488</td>\n",
+       "      <td>-58</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1876-01-05</th>\n",
+       "      <td>127488</td>\n",
+       "      <td>-98</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-27</th>\n",
+       "      <td>111448</td>\n",
+       "      <td>147</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-28</th>\n",
+       "      <td>111448</td>\n",
+       "      <td>170</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-29</th>\n",
+       "      <td>111448</td>\n",
+       "      <td>169</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-30</th>\n",
+       "      <td>111448</td>\n",
+       "      <td>153</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-31</th>\n",
+       "      <td>111448</td>\n",
+       "      <td>129</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>53630 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             SOUID   TG  Q_TG\n",
+       "DATE                         \n",
+       "1876-01-01  127488   22     0\n",
+       "1876-01-02  127488   25     0\n",
+       "1876-01-03  127488    3     0\n",
+       "1876-01-04  127488  -58     0\n",
+       "1876-01-05  127488  -98     0\n",
+       "...            ...  ...   ...\n",
+       "2022-10-27  111448  147     0\n",
+       "2022-10-28  111448  170     0\n",
+       "2022-10-29  111448  169     0\n",
+       "2022-10-30  111448  153     0\n",
+       "2022-10-31  111448  129     0\n",
+       "\n",
+       "[53630 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
