--- a/data_science/unsupervised_movie_recommender/notebooks/data_preprocessing.ipynb
+++ b/data_science/unsupervised_movie_recommender/notebooks/data_preprocessing.ipynb
@@ -5815,7 +5815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an examaple of how we would **obtain our predictions for a new user**:"
+    "This is an example of how we would **obtain our predictions for a new user**:"
    ]
   },
   {
